Some progress for mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Intro */
-#intro {
+section#intro {
     height: 100vh;
     background-image: url("../img/intro-bg.jpg");
     background-size: cover;
@@ -34,6 +34,49 @@
     padding-left: 0;
     padding-right: 1rem;
     font-size: 1.5rem;
+}
+
+@media (max-width: 991.98px) {
+    #intro .display-1 {
+        font-size: 4.25rem;
+    }
+
+    #intro .lead {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 767.98px) {
+    #intro .display-1 {
+        font-size: 3rem;
+    }
+
+    #intro .lead {
+        font-size: 1.1rem;
+    }
+}
+
+@media (max-width: 575.98px) {
+    section#intro {
+        background-position: 80%;
+    }
+
+    #intro .display-1 {
+        font-size: 3rem;
+    }
+
+    #intro .lead {
+        font-size: 1.25rem;
+    }
+
+    #intro .nav-item a {
+        font-size: 1rem;
+    }
+
+    #intro .kh-intro-bottom {
+        background-color: rgba(233, 236, 239, 0.8);
+        bottom: 0;
+    }
 }
 
 /* About */
